# chebyshev-linear-equations

./: .gitignore  CMakeLists.txt  README.md  data_generator.py  main.c
src/: base.c  base.h  chebyshev.c  chebyshev.h  vector_operations.c  vector_operations.h
tests/: CMakeLists.txt  base.h  basic.c  basic_tests.c  test_base.h  various_s_parameter.c
tests/sources/: data  data.expected_solution  simple_eq
